[package]
name = "hpmor"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.7.0", features = ["mp3"] }
bevy-inspector-egui = "0.11.0"
bevy_egui = "0.14.0"
bevy_ecs_ldtk = "0.3.0"
paste = "1.0.7"
strum = "0.24.1"
bevy-discord-presence = "0.3.2"
dotenv = "0.15.0"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", features = [
    "bevy_renderer",
] }
heron = { version = "3.1.0", features = ["2d"] }

once_cell = "1.10.0"
rust-i18n = "0.6.1"

ron = "0.8.0"
serde = "1.0.139"

dlg = "0.1"
anyhow = "1.0.62"
